fixing z-index pada box caption:

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -300,7 +300,6 @@ img.dk-prev {
     right: 0px;
     bottom: 0px;
     color: #fff;
-    z-index: -100;
         -webkit-transition: all 300ms ease-out;
         -moz-transition: all 300ms ease-out;
         -o-transition: all 300ms ease-out;
@@ -599,6 +598,9 @@ u {
   max-width: 33.33%;
   display: inline-block;
   padding: 0px 5px;
+}
+.upload_dk > input {
+  display: none;
 }
 
  /* Smartphones (portrait and landscape) ----------- */
